# Rank

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
Config/: Debug.xcconfig  Local.xcconfig.example  Release.xcconfig
RichRank/: ContentView.swift  Info.plist  RichRankApp.swift
RichRank.xcodeproj/: project.pbxproj
RichRank/Auth/: LoginView.swift  SignupView.swift
RichRank/Leaderboard/: DeltaPill.swift  Formatters.swift  LeaderboardRow.swift  LeaderboardToggle.swift  LeaderboardView.swift  MyRankCard.swift  RankMovement.swift  (+2 more)
RichRankTests/: RichRankTests.swift
RichRankUITests/: RichRankUITests.swift  RichRankUITestsLaunchTests.swift
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_security_hardening.py
backend/app/: config.py  db.py  main.py
backend/app/api/: auth.py  bank.py  deps.py  leaderboard.py
backend/app/models/: __init__.py  balance.py  bank_account.py  refresh_token.py  user.py
backend/app/schemas/: auth.py  bank.py  leaderboard.py  user.py
backend/app/services/: age_bucket.py  connect_nonce.py  crypto.py  jwt_service.py  leaderboard.py  refresh_token_service.py  teller.py  teller_connect_verify.py  username_generator.py
backend/app/static/landing/: board.js  index.html  landing.css
backend/app/workers/: celery_app.py  recompute_leaderboard.py  refresh_balances.py  snapshot_prev_day_ranks.py
backend/tests/: conftest.py  test_age_bucket.py  test_auth_flow.py  test_crypto.py  test_refresh_logout.py  test_username.py
(+14 files in other folders)
