[project]
name = "rank-backend"
version = "0.1.0"
description = "Rank — anonymous balance leaderboard backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "psycopg[binary]==3.2.3",
    "alembic==1.14.0",
    "celery==5.4.0",
    "redis==5.2.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "pyjwt==2.10.1",
    "cryptography==44.0.0",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "slowapi==0.1.9",
    "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "aiosqlite==0.20.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
